STYLING/FIXES: completely fixes overflow hero issue on mobile, adds logic to not render scores if they are 0

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,8 +18,9 @@
   list-style: none;
 }
 
-body {
+body, html {
   overflow-x: hidden;
+  position: relative;
 }
 
 .hero-container {
@@ -33,16 +34,8 @@ body {
 .hero-container::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 675px;
-  left: 50%;
-  pointer-events: none;
-  position: absolute;
-  transform: translateX(-50%);
   width: 100%;
   height: 100%;
-  z-index: 0;
   background: linear-gradient(
       90deg,
       rgba(15, 23, 42, 1) 0%,
